# glados-docker

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .snyk  CLAUDE.md  CURRENT_STATE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: battery-nightly.yml  build.yml  gitleaks.yml  snyk.yml  tests.yml
.interface-design/: system.md
archive/pre-rewrite-20260419/: README.md
configs/: config.example.yaml  disambiguation.example.yaml  glados_config.example.yaml  logging.example.yaml  sip.example.yaml  sound_categories.yaml  user_preferences.example.yaml
configs/canon/: aperture_worldbuilding.txt  cave_johnson.txt  chell.txt  glados_arc.txt  personality_cores.txt  turret_opera.txt  wheatley.txt
docker/: compose.cuda.yml  compose.ipex.yml  compose.rocm.yml  compose.yml
docs/: AUTH_DESIGN.md  AUTH_PLAN.md  CHANGES.md  INFRASTRUCTURE.md  RESTORE.md  SELF_CONTAINMENT.md  Stage 1.md  Stage 3 - MQTT Intent Classifier.md  Stage 3.md  battery-findings-and-remediation-plan.md  design-system-reconciliation.md  disambiguation-research.md  models.md  plugin-bundle-format.md  plugins-architecture.md  roadmap.md  state-query-prompt-research.md  ui-polish-audit.md
docs/handoff/: 2026-04-27-aibox-lmstudio-cutover.md  2026-04-27-engine-stall-investigation.md  2026-04-27-glados-openai-compliance.md  2026-04-27-lmstudio-baseline-tests.md  2026-05-03-next-session-prompt.md  2026-05-03-spotify-plugin-and-triage.md  (+1 more)
glados/: server.py
scripts/: .gitkeep  _hot_copy.py  _inject_verbatim_rule.py  _local_deploy.py  assign_ha_floors.py  emotion_probe.py  ha_cleanup_rename_and_assign.py  probe_memory.py
tests/: _webui_source.py  dev_webui.py  test_anaphora.py  test_area_inference.py  test_audio_speech_normalization.py  test_audit.py  test_auth_bypass.py  test_auth_gating_helpers.py  test_auth_hashing.py  test_auth_migration.py  test_auth_routes.py  test_auth_sessions.py  test_autonomy_crosstalk.py  test_autonomy_llm_client_budget.py  test_autonomy_llm_client_json_schema.py  test_autonomy_llm_client_reasoning.py  test_autonomy_slot_filter.py  test_builtin_tools.py  test_canon_context.py  test_canon_gate.py  test_canon_loader.py  test_change_password.py  test_chat_resolver_gate.py  test_chime_library.py  test_command_lane_routing.py  test_command_resolver.py  test_config_defaults.py  test_conversation_db.py  test_csv_harness.py  test_csv_harness_live.py  test_disambiguator.py  test_discover_endpoints.py  test_doorbell_scene_prepend.py  test_duration.py  test_emotion_dynamics.py  test_engine_plugin_gate.py  test_fastpath_local.py  test_glados_config_url_sync.py  test_glados_services_override.py  test_ha_conversation.py  (+76 more)
(+305 files in other folders)
