[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "glados"
version = "0.1.0"
description = "GLaDOS persona middleware layer — OpenAI-compatible AI assistant"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "chromadb>=0.5",
    "mcp>=1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
discord = [
    "discord.py>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["glados*"]
